<resources>
    <string name="app_name">SinaWang</string>
    <string name="pengenalan_wayang">Apa itu</string>
    <string name="article_subtitle">Pengenalan singkat Wayang Kulit</string>
    <string name="article_text"> \t <b>Wayang</b> adalah seni pertunjukkan asli Indonesia yang berkembang pesat di Pulau Jawa dan Bali. Pertunjukan ini juga populer di beberapa daerah seperti Sumatra dan Semenanjung Malaya juga memiliki beberapa budaya wayang yang terpengaruh oleh kebudayaan Jawa dan Hindu.\n\n
\t UNESCO, lembaga yang membawahi kebudayaan dari PBB, pada 7 November 2003 menetapkan wayang sebagai pertunjukan bayangan boneka tersohor dari Indonesia, sebuah warisan mahakarya dunia yang tak ternilai dalam seni bertutur (Masterpiece of Oral and Intangible Heritage of Humanity).
Sebenarnya, pertunjukan boneka tak hanya ada di Indonesia karena banyak pula negara lain yang memiliki pertunjukan boneka. Namun pertunjukan bayangan boneka (Wayang) di Indonesia memiliki gaya tutur dan keunikan tersendiri, yang merupakan mahakarya asli dari Indonesia.\n\n
        \t Untuk itulah UNESCO memasukannya ke dalam Daftar Representatif Budaya Takbenda Warisan Manusia pada tahun 2003.
Tak ada bukti yang menunjukkan wayang telah ada sebelum agama Hindu menyebar di Asia Selatan. Diperkirakan seni pertunjukan dibawa masuk oleh pedagang India. Namun, kegeniusan lokal dan kebudayaan yang ada sebelum masuknya Hindu menyatu dengan perkembangan seni pertunjukan yang masuk memberi warna tersendiri pada seni pertunjukan di Indonesia. Sampai saat ini, catatan awal yang bisa didapat tentang pertunjukan wayang berasal dari Prasasti Balitung pada Abad ke 4 yang berbunyi si Galigi mawayang.\n\n
\t Ketika agama Hindu masuk ke Indonesia dan menyesuaikan kebudayaan yang sudah ada, seni pertunjukan ini menjadi media efektif menyebarkan agama Hindu. Pertunjukan wayang menggunakan cerita Ramayana dan Mahabharata.
Para Wali Sembilan di Jawa, sudah membagi wayang menjadi tiga. Wayang Kulit di timur, wayang wong di Jawa Tengah dan wayang golek di Jawa Barat. Adalah Raden Patah dan Sunan Kali Jaga yang berjasa besar. Carilah wayang di Jawa Barat, golek ono dalam bahasa jawi, sampai ketemu wong nya isinya yang di tengah, jangan hanya ketemu kulit nya saja di Timur di wetan wiwitan. Mencari jati diri itu di Barat atau Kulon atau kula yang ada di dalam dada hati manusia. Maksud para Wali terlalu luhur dan tinggi filosofi nya. Wayang itu tulen dari Jawa asli, pakeliran itu artinya pasangan antara bayang bayang dan barang aslinya. Seperti dua kalimah syahadat. Adapun Tuhan masyrik wal maghrib itu harus diterjemahkan ke dalam bahasa jawa dulu yang artinya wetan kawitan dan kulon atau kula atau saya yang ada di dalam. Carilah tuhan yang kawitan pertama dan yang ada di dalam hati manusia. (sik)

Demikian juga saat masuknya Islam, ketika pertunjukan yang menampilkan “Tuhan” atau “Dewa” dalam wujud manusia dilarang, munculah boneka wayang yang terbuat dari kulit sapi, di mana saat pertunjukan yang ditonton hanyalah bayangannya saja. Wayang inilah yang sekarang kita kenal sebagai wayang kulit. Untuk menyebarkan Islam, berkembang juga wayang Sadat yang memperkenalkan nilai-nilai Islam.</string>
    <string name="article_subtitle2">Wayang Kontemporer</string>
    <string name="article_text2">\t Sejarah wayang kulit adalah sejarah inovasi. Mungkin perkembangan yang kita saksikan di abad ke-21 lebih drastis dari perkembangan yang telah terjadi pada abad-abad sebelumnya. Tapi kreativitas adalah amĕrta dunia wayang kulit. Meskipun batas antara wayang tradisi dan wayang kontemporer, serta antara wayang dan bentuk seni lainnya terkadang tidak jelas, untuk tujuan Arsip Wayang Kontemporer, pertunjukan wayang kontemporer didefinisikan dengan karakteristik sebagai berikut ini:\n\n
    \t 1) Dalang merupakan figur utama. Banyak pertunjukan teater menggunakan konvensi wayang, tetapi sosok dalang tidak muncul, atau figur dalang muncul tapi tidak terlalu penting. Misalnya, karya Republik Bagong (2001), dari Teater Koma. Pertunjukan seperti ini, yang tidak memprioritaskan peran dalang tidak masuk ke dalam Arsip Wayang Kontemporer.\n\n
\t 2) Konvensi-konvensi wayang kulit tetap digunakan. Konvensi karawitan, struktur lakon, seni rupa wayang dan bahasa pedhalangan masih tetap digunakan, meskipun konvensi-konvensi itu sudah dikemas atau ditafsirkan dengan gaya yang sangat jauh dari dunia wayang klasik.\n\n
\t 3) Pertunjukan diciptakan dan direkam pada abad 21 di Jawa. Arsip tidak berisi versi wayang kontemporer dalam media film, karya seni, videograme atau novel. Arsip juga tidak berisi rekaman pertunjukan-pertunjukan kontemporer yang diciptakan di negara lain atau karya wayang kontemporer yang dibuat sebelum abad 21.\n\n
\t Karakteristik ini penting untuk keperluan arsip. Tapi para pembuat Arsip Wayang Kontemporer prihatin karakteristik ini akan dianggap sebagai aturan baku. Ini hanya petunjuk untuk sementara – definisi dan makna wayang kontemporer pasti akan berubah seiring dengan perkembangan seni pertunjukan. Penting sekali kalau kita semua bisa terus membahas definisi dan fungsi wayang kontemporer di masa yang akan datang.

 </string>
    <string name="nama_tokoh">Nama tokoh</string>
    <string name="nama_lain">Nama lain</string>
    <string name="description">description</string>
    <string name="aplikasi_text">

        \t Bermain dan belajar mengenai dunia wayang kulit yang dikemas dalam  sebuah aplikasi berbasis android.\n\n

\t <b>SinaWang</b> hadir untuk memberikan informasi terkait dunia wayang kulit serta membantu masyarakat diera modern ini dalam mempelajari salah satu kebudayaan indonesia yaitu wayag kulit.\n\n

\t 4 Fitur utama SinaWang :\n\n

\t 1. Tentang Wayang \n
     \t\t Pelajari mengenai seputar dunia wayang dan sejarahnya dalam fitur ini.\n\n

\t 2. Tokoh Wayang \n
     \t\t Kenali tokoh wayang kulit dalam fitur ini.\n\n

\t 3. Quiz Wayang\n
     \t\t Bermain dan belajar dengan menyelesaikan tantangan pertanyaan dalam fitur ini.\n\n

\t 4. Watak Wayang\n
    \t\t Cari tahu Watak dari tokoh wayang dalam fitur ini.\n\n



</string>
    <string name="mahabarata">
\t Mahabarata secara garis besar mengisahkan kehidupan Santanu (Çantanu) seorang raja yang perkasa keturunan keluarga Kuru dan bertakhta di kerajaan Barata. Bersama permaisurinya Dewi Gangga, mereka dikaruniai seorang putra bernama Bisma.\n\n
\t Pada suatu hari Çantanu jatuh cinta pada seorang anak raja nelayan bernama Setyawati. Namun ayahanda Setyawati hanya mau memberikan putrinya jika Çantanu kelak mau menobatkan anaknya dari Setyawati sebagai putra mahkota pewaris takhta dan bukannya Bisma. Karena syarat yang berat ini Çantanu terus bersedih. Melihat hal ini, Bisma yang tahu mengapa ayahnya demikian, merelakan haknya atas takhta di Barata diserahkan kepada putra yang kelak lahir dari Setyawati. Bahkan bisma berjanji tidak akan menuntut itu kapan pun dan berjanji tidak akan menikah agar kelak tidak mendapat anak untuk mewarisi takhta Çantanu.\n\n
\t Perkawinan Çantanu dan Setyawati melahirkan dua orang putra masing-masing Citranggada dan Wicitrawirya. Namun kedua putra ini meninggal dalam pertempuran tanpa meninggalkan keturunan. Karena takut punahnya keturunan raja, Setyawati memohon kepada Bisma agar menikah dengan dua mantan menantunya yang ditinggal mati oleh Wicitrawirya, masing-masing Ambika dan Ambalika. Namun permintaan ini ditolak Bisma mengingat sumpahnya untuk tidak menikah.\n\n
\t Akhirnya Setyawati meminta kepada Wiyasa anaknya dari perkawinan yang lain, untuk menikah dengan Ambika dan Ambalika. Perkawinan dengan Ambika melahirkan Destarasta dan dengan Ambalika melahirkan Pandu. Destarasta lalu menikah dengan Gandari dan melahirkan seratus orang anak, sedangkan Pandu menikahi Kunti dan Madrim tapi tidak mendapat anak. Nanti ketika Kunti dan Madrim kawin dengan dewa-dewa, Kunti melahirkan 3 orang anak masing dengan dewa Darma lahirlah Yudistira, dengan dewa Bayu lahir Werkodara atau Bima dan dengan dewa Surya lahirlah Arjuna. Sedangkan Madrim yang menikah dengan dewa kembar Aҫ win, lahir anak kembar bernama Nakula dan Sadewa.\n\n
\t Selanjutnya, keturunan-keturuan itu dibagi dua yakni keturunan Destarasta disebut Kaum Kurawa sedangkan keturunan Pandu disebut kaum Pandawa.\n\n
\t Sebenarnya Destarasta berhak mewarisi takhta ayahnya, tapi karena ia buta sejak lahir, maka takhta itu kemudian diberikan kepada Pandu. Hal ini pada kemudian hari menjadi sumber bencana antara kaum Pandawa dan Kurawa dalam memperebutkan takhta sampai berlarut-larut, hingga akhirnya pecah perang dahsyat yang disebut baratayuda yang berarti peperangan memperebutkan kerajaan Barata.\n\n
\t Peperangan diawali dengan aksi judi dimana kaum Pandawa kalah. Kekalahan ini menyebabkan mereka harus mengembara di hutan belantara selama dua belas tahun. Setelah itu, pada tahun ke-13 sesuai perjanjian dengan Kurawa, para Pandawa harus menyembunyikan diri di tempat tertentu. Namun para Pandawa memustuskan untuk bersembunyi di istana raja Matsya. Pada tahun berikutnya, para Pandawa keluar dari persembunyian dan memperlihatkan diri di muka umum lalu menuntut hak mereka kepada Kurawa. Namun tuntutan mereka tidak dipenuhi Kurawa hingga terjadi perang 18 hari yang menyebabkan lenyapnya kaum Kurawa. Dengan demikian, kaum Pandawa dengan leluasa mengambil alih kekuasaan di Barata.\n\n

    </string>
</resources>