<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ADBEDE4"
    tools:context=".TentangWayangActivity">

    <RelativeLayout
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bgcurvsmall">

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/carocard">
        <com.synnapps.carouselview.CarouselView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:pageColor="#FF000000"
            app:fillColor="#FFFF"
            app:slideInterval="3000"
            app:radius="5dp"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp"
            android:id="@+id/carousel">
        </com.synnapps.carouselview.CarouselView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ing"
        android:layout_below="@+id/carocard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        android:text="Kisah wayang"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"/>

        <RelativeLayout
            android:layout_below="@+id/carocard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/TentangW"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:background="@color/oldgreen"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="16dp"
                android:outlineAmbientShadowColor="#000"
                android:outlineSpotShadowColor="#000"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:onClick="ramayana">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Kisah ramayana"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"></TextView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/TokohW"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:outlineAmbientShadowColor="#000"
                android:outlineSpotShadowColor="#000"
                app:cardCornerRadius="15dp"
                android:onClick="mahabarata"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:fontFamily="monospace"
                    android:text="Kisah Mahabarata"
                    android:textAlignment="center"
                    android:textSize="14dp"
                    android:textStyle="bold"></TextView>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>


    <LinearLayout
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/carocard"
        android:layout_marginTop="165dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/carocard"
            android:padding="1dp"
            android:text="@string/pengenalan_wayang"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text=" Wayang ?"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#FFA801"
            android:textStyle="bold" />

    </LinearLayout>


        <ScrollView
            android:layout_below="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/article_subtitle"
                    android:textColor="@color/oldgreen"
                    android:textAppearance="@android:style/TextAppearance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="1.5dp"
                    android:text="@string/article_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/article_subtitle2"
                    android:textAppearance="@android:style/TextAppearance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="1.5dp"
                    android:text="@string/article_text2" />


            </LinearLayout>

    </ScrollView>

</RelativeLayout>